Time: 1 ms (33.77%), Space: 40.1 MB (70.95%) - LeetHub