@@ -1,5 +1,5 @@
 class Solution {
-    public  void comb(int st,int k,int n,LinkedList l,List<List<Integer>> list){
+    public  void comb(int st,int k,int n,List<Integer> l,List<List<Integer>> list){
       if(k<0 && n<0)
         return;
       if(k==0 && n==0){
@@ -9,12 +9,12 @@ class Solution {
       for(int i=st;i<=9;i++){
         l.add(i);
         comb(i+1,k-1,n-i,l,list);
-        l.removeLast();
+        l.remove(l.size()-1);
       }
     }
     public List<List<Integer>> combinationSum3(int k, int n) {
         List<List<Integer>> list = new ArrayList<>();
-        comb(1,k,n,new LinkedList(),list);
+        comb(1,k,n,new ArrayList(),list);
         return list;
     }
 }
